# fsynth

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/fsynth/: __init__.py  cli.py  engine.py  fundamentals.py
